styles.mob.css
@media (max-width: 800px) {
    .wrapper {
        padding: 50px 20px 30px 20px;
    }

    .container-content {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
    }

    .container-content {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
    }

    .coming-soon {
        margin-top: 30px;
        font-size: 60px;
    }

    .description {
        font-size: 16px;
    }

    .button {
        width: 135px;
        height: 50px;
        font-size: 15px;
    }


    .column-right {
        display: flex;
        flex-direction: column;
    }

    .rocket {
        flex: 1;
        display: flex;
        flex-direction: column;
    }

    .circle1 {
        position: fixed;
        right: -100px;
        top: -330px;
        width: 400px;
        height: 400px;
        border-radius: 400px;
        background-image: linear-gradient(217deg, #d4edeb, #96e0d0);
        z-index: 2;
    }

    .circle2 {
        position: fixed;
        right: -140px;
        top: -100px;
        width: 200px;
        height: 200px;
        border-radius: 250px;
        background-image: linear-gradient(217deg, #d4edeb, #96e0d0);
        z-index: 1;
    }

    .circle5 {
        right: -67px;
        top: auto;
        bottom: -80px;
    }

    .circle6 {
        display: none;
    }
}

